add latex to repository

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,38 @@ dkms.conf
 
 #VSCode
 .vscode
+
+# LaTeX build artifacts
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.brf
+*.fdb_latexmk
+*.fls
+*.fmt
+*.fot
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.nav
+*.out
+*.snm
+*.synctex.gz
+*.synctex(busy)
+*.toc
+*.vrb
+*.xdv
+*.acn
+*.acr
+*.alg
+
+# latexmk & minted caches
+_minted*
